Play with retrofit 1.9.0

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="refresh_progress_1">@android:color/holo_red_light</color>
+    <color name="refresh_progress_2">@android:color/holo_orange_light</color>
+    <color name="refresh_progress_3">@android:color/holo_green_light</color>
 </resources>
