--- a/app/src/main/res/layout/fragment_rss_list.xml
+++ b/app/src/main/res/layout/fragment_rss_list.xml
@@ -24,5 +24,5 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="16sp"
         android:gravity="center"
-        android:visibility="invisible"/>
+        android:visibility="visible"/>
 </FrameLayout>
